hw6_lab10/tests/errors/syn_missing_for_in.kt
fun main() {
    for (i 1..5) {
        println(i)
    }
}
